--- a/index.html
+++ b/index.html
@@ -1,8 +1,23 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- vite PWA minimal requirement -->
+
+    <meta name="description" content="Voter logo ka Database" />
+    <link rel="apple-touch-icon" href="/apple-icon-180.png" sizes="180x180" />
+    <link
+      rel="mask-icon"
+      href="/manifest-icon-512.maskable.png"
+      color="#FFFFFF"
+    />
+    <meta name="theme-color" content="#ffffff" />
+
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/manifest-icon-192.maskable.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Voter DB</title>
   </head>
